# ps-rust-actix-api

./: .gitignore  README.md
docker/: Dockerfile
flight-plan/: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.debug.yml  docker-compose.yml
flight-plan/assets/: code.html  database.sql  duckair.crt  duckair.db  duckair.key
flight-plan/src/: database.rs  endpoints.rs  main.rs  schema.rs
web-site/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  flightplanform.html  flightplanlist.html  index.html
web-site/js/: client.js
