[package]
name = "flight-plan"
version = "0.1.0"
edition = "2021"
description = "Pluralsight Web API using Actix"
authors = ["Edward Curren"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.2.2", features = ["v4"]}
config = "0.13.3"
actix = "0.13.0"
actix-web = {version = "4.3.0", features= ["openssl"] }
env_logger = "0.10.0"
